// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ElasticBeatsCard props button 1`] = `
<EuiCard
  description="Use Beats to add data from various systems to Elasticsearch."
  footer={
    <EuiButton
      fill={true}
    >
      Button
    </EuiButton>
  }
  href="/app/home#/tutorial_directory"
  image="/plugins/kibanaReact/assets/elastic_beats_card_light.svg"
  paddingSize="l"
  title="Add data"
/>
`;

exports[`ElasticBeatsCard props href 1`] = `
<EuiCard
  description="Use Beats to add data from various systems to Elasticsearch."
  footer={
    <EuiButton
      fill={true}
    >
      Button
    </EuiButton>
  }
  href="#"
  image="/plugins/kibanaReact/assets/elastic_beats_card_light.svg"
  paddingSize="l"
  title="Add data"
/>
`;

exports[`ElasticBeatsCard props recommended 1`] = `
<EuiCard
  betaBadgeLabel="Recommended"
  description="Use Beats to add data from various systems to Elasticsearch."
  footer={
    <EuiButton
      fill={true}
    >
      Add data
    </EuiButton>
  }
  href="/app/home#/tutorial_directory"
  image="/plugins/kibanaReact/assets/elastic_beats_card_light.svg"
  paddingSize="l"
  title="Add data"
/>
`;

exports[`ElasticBeatsCard renders 1`] = `
<EuiCard
  description="Use Beats to add data from various systems to Elasticsearch."
  footer={
    <EuiButton
      fill={true}
    >
      Add data
    </EuiButton>
  }
  href="/app/home#/tutorial_directory"
  image="/plugins/kibanaReact/assets/elastic_beats_card_light.svg"
  paddingSize="l"
  title="Add data"
/>
`;
